--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "qwer1234",
+    "database": "movie",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
